# openscad-mcp

./: .gitignore  Dockerfile.build  Dockerfile.render  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  publish.yml
.kiro/settings/: mcp.json
.kiro/specs/openscad-mcp-server/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: git-workflow.md
src/openscad_mcp_server/: __init__.py  __main__.py  models.py  server.py
src/openscad_mcp_server/prompts/: workflow.py
src/openscad_mcp_server/resources/: library_ref.py  openscad_syntax.py  pitfalls.py
src/openscad_mcp_server/services/: container.py  feedback_service.py  file_manager.py  library_service.py  session.py  stl_parser.py
src/openscad_mcp_server/tools/: build_stl.py  check_syntax.py  feedback_tools.py  finalize.py  init_tool.py  library_tools.py  measure_stl.py  render_images.py  save_code.py
tests/: test_check_syntax.py  test_confidence.py  test_container.py  test_feedback.py  test_file_manager.py  test_init_tool.py  test_library_service.py  test_render.py  test_save_code.py  test_selective_render.py  test_server.py  test_session.py  test_stl_parser.py  test_version_tag.py
