[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openscad-mcp-server"
version = "0.16.0"
description = "MCP server for OpenSCAD 3D model generation, compilation, and visual inspection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
openscad-mcp-server = "openscad_mcp_server:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openscad_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
